--- a/Assignment2/src/main/java/assets/css/AcesUp.css
+++ b/Assignment2/src/main/java/assets/css/AcesUp.css
@@ -1,3 +1,16 @@
+table.center{
+margin-left:auto;
+margin-right:auto;
+}
+#topright {
+position : relative;
+}
+#topright button{
+    position: absolute;
+    top: 0px;
+    right: 300px;
+}
+
 tr{
 width:500px;
 }
