--- a/Assignment2/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment2/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -1,11 +1,14 @@
-<h1>Aces Up</h1>
+<center><h1>Aces Up</h1></center>
 
 <link href="/assets/css/AcesUp.css" rel="stylesheet">
 <script type="text/javascript" src="/assets/webjars/jquery/2.1.3/jquery.js"></script>
 
 <body>
 
-<table>
+<div id ="topright">
+    <button id="dealButton"><img src="../../assets/cardback.png" width="172" height="244" border="0" alt="javascript button"></button>
+</div>
+<table class = "center">
     <tr class="title">
         <td>Column0</td>
         <td >Column1</td>
@@ -87,8 +90,6 @@
         </td>
     </tr>
 </table>
-
-<button id="dealButton">Deal</button>
 <BR>Remove from: <button id="Remove1">Column1</button><button id="Remove2">Column2</button><button id="Remove3">Column3</button><button id="Remove4">Column4</button>
 
 <BR>Move from column <input type="text" id="from_col"  /> to <input type="text" id="to_col"  /> <button id="moveButton">Move</button>
