Changed card images

--- a/Assignment2/src/main/java/assets/css/AcesUp.css
+++ b/Assignment2/src/main/java/assets/css/AcesUp.css
@@ -10,7 +10,6 @@ margin-right:auto;
 position : relative;
 }
 #topright button{
-    position: absolute;
     top: 0px;
     right: 300px;
 }
@@ -30,6 +29,8 @@ font-weight: bold;
 }
 
 .cardLocation{
-width: 100px;
-background-color:#F0F0F0;
+width: 60px;
+height: 90px;
+background-size: cover;
+
 }
